--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
 			<artifactId>font-awesome</artifactId>
 			<version>6.4.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>ckeditor</artifactId>
+			<version>31.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
