--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.datasource.hikari.auto-commit=false
 
 spring.resources.static-locations=classpath:/public/
 
-admin.username=admin
-admin.password=admin
+admin.username=${ADMIN_USERNAME:admin}
+admin.password=${ADMIN_PASSWORD:admin}
