--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://db:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -12,3 +12,5 @@ spring.resources.static-locations=classpath:/public/
 
 admin.username=${ADMIN_USERNAME:admin}
 admin.password=${ADMIN_PASSWORD:admin}
+
+bike_thumbnails_dir=/app/thumbnails/
