--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+bike_thumbnails_dir=/app/thumbnails/
