init example data generated by faker library

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-spring.datasource.url=jdbc:postgresql://db:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://db:5432/bikecatalog
+spring.datasource.username=bikecatalog
+spring.datasource.password=bc1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-
-spring.datasource.hikari.auto-commit=false
 
 spring.resources.static-locations=classpath:/public/
 
