--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,14 @@
 services:
   db:
-    image: postgres:16.2
+    image: postgres:16.3
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
-    ports:
-      - 5432:5432
-    volumes:
-      - ./docker/db:/var/lib/postgresql/data
+      POSTGRES_USER: bikecatalog
+      POSTGRES_PASSWORD: bc1234
   app:
     build:
       context: .
       dockerfile: docker/app/Dockerfile
     ports:
       - 8080:8080
-    volumes:
-      - ./docker/app/thumbnails:/app/thumbnails
     depends_on:
       - db
